--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,14 @@
-.floating{
-    float: left;
-    -webkit-animation-name: Floatingx;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-timing-function: ease-in-out;
-    -moz-animation-name: Floating;
-    -moz-animation-duration: 2s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-timing-function: ease-in-out;
-    margin-left: 30px;
-    margin-top: 5px;
-
+.main {
+  width: 100%;
+  height: 100%;
 }
 
-@-webkit-keyframes Floatingx{
-    from {-webkit-transform:translate(0, 0px);}
-    50% {-webkit-transform:translate(0, 10px);}
-    to {-webkit-transform: translate(0, -0px);    }
+.section-one {
+  width: 100%;
+  height: 100%;
 }
 
-@-moz-keyframes Floating{
-    from {-moz-transform:translate(0, 0px);}
-    50% {-moz-transform:translate(0, 10px);}
-    to {-moz-transform: translate(0, -0px);}
+.section-one .logo {
+  background: url(../img/logo.png);
+  background-repeat: no-repeat;
 }
