--- a/css/head.css
+++ b/css/head.css
@@ -1,27 +1,65 @@
-.head {
-
+.name {
+  font-family: FuckingAWF;
+  font-size: 40px;
+  color: #ff42cb;
 }
-
-.girl {
-}
-
-.girl_1 {
+#girl_1 {
+  background-image: url("../img/head/head_a_girl.png");
   display: block;
-  float: left;
+  position: absolute;
+  margin: 10px 0 0 20px;
   width: 308px;
   height: 518px;
 }
-.girl_1:hover {
+
+#girl_1:hover {
   background-image: url("../img/head/head_a_girl_2.png");
 }
 
-.girl_2 {
-  float: right;
+#girl_1 .name_1 {
+  position: absolute;
+  margin: 540px 0 0 75px;
+  width: 205px;
+  height: 35px;
+}
+
+#girl_1 .name_1:hover {
+  display: block;
+}
+
+#girl_2 {
+  background-image: url("../img/head/head_b_girl.png");
+  display: block;
+  margin: 10px 0 0 1050px;
+  position: absolute;
   width: 375px;
   height: 523px;
 }
 
-.boy {
+#girl_2:hover {
+  background-image: url("../img/head/head_b_girl_2.png");
+}
+
+
+#girl_2 .name_2 {
+  position: absolute;
+  margin: 540px 0 0 1050px;
+}
+
+#girl_2 .name_2:hover {
+  display: block;
+}
+
+
+#boy {
+  background-image: url(../img/head/head_boy.png);
+  display: block;
+  margin: 255px 0 0 500px;
+  position: absolute;
   width: 362px;
   height: 430px;
+}
+
+#boy:hover {
+  background-image: url(../img/head/head_boy_2.png);
 }
