--- a/css/four.css
+++ b/css/four.css
@@ -1,7 +1,6 @@
-.square_2 {
-  background-color: red;
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  border: 15px solid #9eff46;
+.bg_2 {
+  background-color: #ff42cb;
+  width: 100%;
+  height: 50vh;
+  margin-top: 50vh;
 }
