--- a/css/button.css
+++ b/css/button.css
@@ -1,5 +1,5 @@
 #nav-icon {
-  /*z-index: 2;*/
+  z-index: 2;
 
   position: absolute;
   top: 20px;
@@ -85,7 +85,7 @@
 }
 
 .fullscreen-nav {
-  /*z-index: 1;*/
+  z-index: 1;
   padding-top: 40px;
   height: 100%;
   width: 100%;
