--- a/css/test.css
+++ b/css/test.css
@@ -1,68 +1,5 @@
-#btn {
-  z-index: 999;
-  background: black;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  width: 100px;
-	height: 60px;
-	cursor: pointer;
-}
-
-.bar,
-.bar:after,
-.bar:before {
-  width: $bar-width;
-	height: $bar-height;
-}
-
-.bar {
-	position: relative;
-	transform: translateY($bar-spacing);
-	background: rgba(255, 255, 255, 1);
-	transition: all 0ms 300ms;
-
-  &.animate {
-    background: rgba(255, 255, 255, 0);
-  }
-}
-
-.bar:before {
-	content: "";
-	position: absolute;
-	left: 0;
-	bottom: $bar-spacing;
-	background: rgba(255, 255, 255, 1);
-	transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.bar:after {
-	content: "";
-	position: absolute;
-	left: 0;
-	top: $bar-spacing;
-	background: rgba(255, 255, 255, 1);
-	transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.bar.animate:after {
-	top: 0;
-	transform: rotate(45deg);
-	transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
-}
-
-.bar.animate:before {
-	bottom: 0;
-	transform: rotate(-45deg);
-	transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
-}
-
-#full_menu {
-  display: none;
-  width: 100vw;
-  height: 100vw;
-  background-color: red;
+#song {
+  font-family: FuckingAWF;
+  font-size: 70px;
+  color: red;
 }
