--- a/css/four.css
+++ b/css/four.css
@@ -1,6 +1,27 @@
-.bg_2 {
+/*.bg_2 {
   background-color: #ff42cb;
-  width: 100%;
-  height: 50vh;
-  margin-top: 50vh;
+  width: 30vw;
+  height: 100%;
+  margin-right: 70vh;
+}*/
+
+.song_text {
+  position: absolute;
+  top: 5vh;
+  left: 32vw;
+}
+
+#song {
+  font-family: FuckingAWF;
+  font-size: 35px;
+  color: #ff42cb;
+}
+
+.gif {
+  width: 663px;
+  height: 1206px;
+  float: left;
+  top: 80px;
+  margin-left: 80px;
+  position: absolute;
 }
