--- a/css/twopage.css
+++ b/css/twopage.css
@@ -1,7 +1,7 @@
-.text {
+.riot_grrrl {
   z-index: 1;
   position: absolute;
-  margin: 170px 0 0 145px;
+  margin: 250px 0 0 250px;
 }
 
 .element {
@@ -13,10 +13,10 @@
 
 .square {
   position: absolute;
-  margin: 70px 0px 0px 100px;
+  top: 200px;
+  left: 200px;
   width: 700px;
   height: 700px;
-  background: white;
   border: 15px solid #9eff46;
 }
 
