--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@
 @import 'floating.css';
 @import 'button.css';
 @import 'head.css';
-@import 'twopage.css';
+@import 'page2.css';
 @import 'font.css';
 @import 'menu.css';
 @import 'test.css';
-@import 'four.css';
+@import 'page3.css';
+@import 'page5.css';
