--- a/css/menu.css
+++ b/css/menu.css
@@ -27,6 +27,6 @@ nav div a:hover {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 100px;
+  height: 15vh;
   text-align: center;
 }
