--- a/css/font.css
+++ b/css/font.css
@@ -2,3 +2,8 @@
   font-family: FuckingAWF;
   src: url(../fonts/FuckinAWF.ttf);
 }
+
+@font-face {
+  font-family: FuturaMD;
+  src: url(../fonts/FuturaMD.ttf);
+}
