--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,4 @@
 @import 'test.css';
 @import 'page3.css';
 @import 'page5.css';
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
