--- a/css/menu.css
+++ b/css/menu.css
@@ -1,32 +1,65 @@
 .menu {
   position: absolute;
   width: 100%;
-  height: 500px;
   margin: 0 auto;
   list-style: none;
   left: 0;
   right: 0;
-  top: 20%;
+  top: 50%;
+  text-align: center;
 }
 
-nav div a {
+/*nav div a {
   text-decoration: none;
   font-family: FuckingAWF;
   display: block;
-  font-size: 60px;
+  font-size: 40px;
   color: #9eff46;
   padding: 45px 25px;
   position: relative;
+  text-align: center;
 }
-
 nav div a:hover {
   color: white;
+}*/
+
+.social-links{
+  font-size: 60px;
+  text-align: center;
+  color: #9eff46;
 }
+
+.social-links a {
+    line-height: 25px !important;
+    position: relative;
+    margin: 0 40px;
+    text-align: center;
+    display: inline-block;
+    color: #9eff46;
+
+    -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+}
+
+.social-links a:hover {
+  color: white;
+}
+
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 15vh;
+  height: 10vh;
   text-align: center;
+}
+
+.footer p {
+  color: #9eff46;
+  font-size: 15px;
+  font-family: FuturaMD;
+  line-height: 30px;
 }
