--- a/css/page5.css
+++ b/css/page5.css
@@ -26,15 +26,38 @@
 
 .likely {
   position: absolute;
-  /*top: 0;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  margin: 0 auto;*/
+  margin: auto;
   width: 600px;
   height: 350px;
   background-color: white;
-  border: 5px solid #9eff46;
+  border: 10px solid #9eff46;
+}
+
+#fb {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+#vk {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.share_button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-top: 15%;
 }
 
 .likely p {
